# variable_base_factoradic_rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: test_variable_base_factoradic.rs
