[package]
name = "variable_base_factoradic"
version = "0.0.1"
edition = "2021"
license = "MIT"
keywords = ["xkcd"]
description = "Rust implementation of Randall Munroe's variable base factoradic number system: https://xkcd.com/2835/"
readme = "README.md"
repository = "https://github.com/soerface/variable_base_factoradic_rs"
homepage = "https://soerface.github.io/variable_base_factoradic/"

[dependencies]

[dev-dependencies]
rstest = "0.18.2"
